refactor: 갤러리 페이지 코드 변경
- API 엔드포인트 변경
- sort 파라미터 enum 형식으로 처리
- 일반적인 예외처리 삭제, enum 예외처리 추가
- 이미지 데이터 요청 dto 형식으로 반환
- column 어노테이션 명시
- 좋아요 삭제시 존재여부 확인하는 쿼리 삭제
- 좋아요 추가 삭제 과정 @Transactional로 처리